<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iParking</string>
    <string name="action_scan">Scan</string>
    <string name="action_scan_cancle">Stop</string>
    <string name="action_printer">Printers</string>
    <string name="hello_world">Hello world!</string>
    <string name="check_pvt">CHECK PVT</string>
	<string name="issue_pvt">ISSUE PVT</string>
	<string name="username_hint">username</string>
	<string name="password_hint">password</string>
	<string name="login_button_lable">Submit</string>
	<string name="plate_source">Plate Source</string>
	<string name="plate_code">Plate Code</string>
	<string name="plate_number">Plate Number</string>
	<string name="category">Category</string>
	<string name="region">Region</string>
	<string name="ok_lable">Ok</string>
	<string name="check_pvt_button_lable">Check PVT</string>
	<string name="issue_pvt_button_lable">Issue PVT</string>
	<string name="plate_code_value">12</string>
	<string name="plate_number_value">64733</string>
	<string name="plate_source_value">Sharjah</string>
	<string name="plate_category_value">No Parking</string>
	<string name="plate_region_value">Block A</string>
	<string name="print_pvt_button_lable">Print PVT</string>
	<string name="discover_printer">Printers</string>
	
	<string name="invalid_access_token">Invalid Token</string>
	<string name="app_failure_case_undefined">Printer app failure case undefined</string>
	<string name="server_not_responding">server_not_responding</string>
	
	
	
</resources>
