<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/login"
    android:layout_height="match_parent" >
    
    

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/username_hint"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignRight="@+id/userName"
        android:layout_below="@+id/userName"
        android:singleLine="true"
        android:layout_marginTop="24dp"
        android:maxLength="20"
        android:maxLines="1"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:text="@string/login_button_lable" />

</RelativeLayout>
