<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <ScrollView 
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:scrollbars="none" >

        <RelativeLayout
            android:id="@+id/checkPVTForm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/check_pvt_form_layout"
            android:padding="5dp" >

            <TextView
                android:id="@+id/plateSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/plate_source"
                android:textSize="6pt"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/plateSourceSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/plateSource"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@+id/plateSource" />

            <TextView
                android:id="@+id/plateCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plateSource"
                android:layout_marginTop="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/plate_code"
                android:textSize="6pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plateNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plateCode"
                android:layout_marginTop="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/plate_number"
                android:textSize="6pt"
                android:textStyle="bold" />

            <Button
                android:id="@+id/checkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/plateNumber"
                android:layout_alignRight="@+id/plateNumberEdtxt"
                android:layout_below="@+id/plateNumber"
                android:layout_marginTop="10dp"
                android:text="@string/login_button_lable" />

            <EditText
                android:id="@+id/plateCodeEdtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/plateCode"
                android:layout_alignBottom="@+id/plateCode"
                android:layout_alignLeft="@+id/plateNumberEdtxt"
                android:ems="10"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:text="@string/plate_code_value" />

            <EditText
                android:id="@+id/plateNumberEdtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/plateNumber"
                android:layout_alignBottom="@+id/plateNumber"
                android:layout_alignLeft="@+id/plateSourceSpinner"
                android:ems="10"
                android:inputType="text"
                android:maxLength="20"
                android:singleLine="true"
                android:text="@string/plate_number_value" />
        </RelativeLayout>
    </ScrollView>
    </FrameLayout>